<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <!--
            Main Activity views
        -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_activity"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/main_activity_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:minEms="2"/>

            <Button
                android:id="@+id/activity_main_set_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_set_age"/>

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:padding="@dimen/table_header_padding"
                    android:text="@string/from"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/border_adjustment"
                    android:background="@drawable/border"
                    android:padding="@dimen/table_header_padding"
                    android:text="@string/via"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/border_adjustment"
                    android:background="@drawable/border"
                    android:padding="@dimen/table_header_padding"
                    android:text="@string/variable"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/border_adjustment"
                    android:background="@drawable/border"
                    android:padding="@dimen/table_header_padding"
                    android:text="@string/value"
                    android:textStyle="bold"/>
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/border_adjustment">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:padding="@dimen/table_header_padding"
                    android:text="@string/fragment_to_activity"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/border_adjustment"
                    android:background="@drawable/border"
                    android:padding="@dimen/table_header_padding"
                    android:text="@string/set_first_name"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/border_adjustment"
                    android:background="@drawable/border"
                    android:padding="@dimen/table_header_padding"
                    android:text="@string/first_name"/>

                <TextView
                    android:id="@+id/activity_main_first_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/border_adjustment"
                    android:background="@drawable/border"
                    android:padding="@dimen/table_header_padding"/>
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/border_adjustment">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:padding="@dimen/table_header_padding"
                    android:text="@string/fragment_to_activity"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/border_adjustment"
                    android:background="@drawable/border"
                    android:padding="@dimen/table_header_padding"
                    android:text="@string/set_last_name"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/border_adjustment"
                    android:background="@drawable/border"
                    android:padding="@dimen/table_header_padding"
                    android:text="@string/last_name"/>

                <TextView
                    android:id="@+id/activity_main_last_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/border_adjustment"
                    android:background="@drawable/border"
                    android:padding="@dimen/table_header_padding"/>
            </TableRow>

            <TableRow android:layout_marginTop="@dimen/border_adjustment">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:padding="@dimen/table_header_padding"
                    android:text="@string/other_fragment"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/border_adjustment"
                    android:background="@drawable/border"
                    android:padding="@dimen/table_header_padding"
                    android:text="@string/set_food"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/border_adjustment"
                    android:background="@drawable/border"
                    android:padding="@dimen/table_header_padding"
                    android:text="@string/favorite_food"/>

                <TextView
                    android:id="@+id/activity_main_favorite_food"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/border_adjustment"
                    android:background="@drawable/border"
                    android:padding="@dimen/table_header_padding"/>
            </TableRow>
        </TableLayout>

        <!--
            User Information Fragment
        -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_information_fragment"/>

        <FrameLayout
            android:id="@+id/user_information_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--
            Food Fragment
        -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_fragment"/>

        <FrameLayout
            android:id="@+id/food_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>